最終課題のアップロード

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Ota AIRI">
-    <meta name="keywords" content="ニセコ, 明る, 和食, コーヒー, アート, イベント, 人見知りコーヒー, 風人">
+    <meta name="keywords" content="html,css,javasccript">
     <title>ニセコの明る - 自然とアートが織りなす和食体験</title>
 
     <link rel="stylesheet" href="./css/main.css">
