--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                         <div>
                             <img src="./img/huto 1.jpg" alt="風人アート作品1" width="200" height="auto">
                         </div>
-                        
+
                         <div>
                             <img src="./img/huto 3.jpg" alt="風人アート作品3" width="200" height="auto">
 
@@ -147,7 +147,12 @@
                         <p>営業時間 (冬期): 17:30 - 23:00</p>
                         <p>営業時間（LUNCH）: 水曜日～土曜日 11:30 - 16:00</p>
                         <p>定休日 (冬期): 日曜日、元旦</p>
-                        <a href="https://www.google.co.jp/maps/place/Akaru+%E6%98%8E%E3%82%8B+Japanese+Restaurant/@42.8607659,140.7024051,17.24z/data=!4m6!3m5!1s0x5f0ab00d95b38a65:0xf4819bfcdc7028a1!8m2!3d42.8611753!4d140.7034248!16s%2Fg%2F11gg70j47m?entry=ttu&g_ep=EgoyMDI1MDcyMy4wIKXMDSoASAFQAw%3D%3D" target="_blank">Googl mapでひらく</a> 
+                        <a href="https://www.google.co.jp/maps/place/Akaru+%E6%98%8E%E3%82%8B+Japanese+Restaurant/@42.8607659,140.7024051,17.24z/data=!4m6!3m5!1s0x5f0ab00d95b38a65:0xf4819bfcdc7028a1!8m2!3d42.8611753!4d140.7034248!16s%2Fg%2F11gg70j47m?entry=ttu&g_ep=EgoyMDI1MDcyMy4wIKXMDSoASAFQAw%3D%3D"
+                            target="_blank">Googl mapでひらく</a>
+                    </div>
+
+                    <div>
+                        <a href="#top">topに戻る</a>
                     </div>
 
                 </div>
